[package]
name = "hitrace"
version = "0.1.0"
edition = "2021"
keywords = ["OpenHarmony", "HarmonyOS", "hitrace", "tracing"]
license = "Apache-2.0"
description = "Safe bindings to the HiTrace tracing system of OpenHarmony"
repository = "https://github.com/jschwe/hitrace"

[target.'cfg(target_env = "ohos")'.dependencies]
hitrace-sys = "0.1"
