[package]
name = "hitrace"
version = "0.1.4"
edition = "2021"
keywords = ["OpenHarmony", "HarmonyOS", "hitrace", "tracing"]
license = "Apache-2.0"
description = "Safe bindings to the HiTrace tracing system of OpenHarmony"
repository = "https://github.com/huawei-drc/hitrace"
readme = "README.md"

[target.'cfg(target_env = "ohos")'.dependencies]
hitrace-sys = "0.1"


[dev-dependencies]
static_assertions = "1.1.0"

[features]
# Completely disable tracing at compile time when selected.
max_level_off = []

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-ohos"
targets = [ "aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
