[package]
name = "hitrace"
version = "0.1.5"
edition = "2021"
keywords = ["OpenHarmony", "HarmonyOS", "hitrace", "tracing"]
license = "Apache-2.0"
description = "Safe bindings to the HiTrace tracing system of OpenHarmony"
repository = "https://github.com/huawei-drc/hitrace"
readme = "README.md"

[target.'cfg(target_env = "ohos")'.dependencies]
hitrace-sys = "0.1.9"


[dev-dependencies]
static_assertions = "1.1.0"

[features]
# Completely disable tracing at compile time when selected.
max_level_off = []
api-19 = ["hitrace-sys/api-19"]
tracing-level-conversion = ["tracing-core"]

[dependencies]
tracing-core = {version = "0.1.36", optional = true}
